# Authenticator

./: Cargo.toml  Dockerfile  Dockerfile.flyway  README.md  config.yml  docker-compose-prod.yml  docker-compose.yml
.github/workflows/: ci-cd.yml  purge-artifacts.yml  rust.yml
config/: config-dev.yml  config-prod.yml
db/: Dockerfile
db/migration/: V01__baseline.sql
src/: main.rs
src/app/: app.rs
src/app/routes/: mod.rs  users_dto.rs  users_routes.rs
src/config/: app_config.rs  authenticator-tester.http  config.rs  db_config.rs  logging_config.rs  mod.rs
src/db/: mod.rs
src/db/repositories/: user_repository.rs
src/entities/: accesses.rs  mod.rs  prelude.rs  users.rs
src/services/: crypto_service.rs  mod.rs  users_service.rs
