[package]
name = "authenticator"
version = "0.1.0"
edition = "2024"

[dependencies]
log="0.4"
config = "0.15.19"
serde={ version = "1.0", features = ["derive"] }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
argon2 = "0.5.3"
axum = "0.8.7"
